Bug fix - too much acceleration on small screens

--- a/styles/screen.css
+++ b/styles/screen.css
@@ -77,6 +77,6 @@
     height: calc((9/16)*(57vw/3));
   }
   .player-controls {
-    width: 15%;
+    width: 19%;
   }
 }
